--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HappyAddOne</title>
+    <meta http-equiv = "refresh" content = "0;url=https://bramble-zoo-ace.notion.site/SnoopyBug-23862e26a1cf80c9bd89e9e5d90e2bbf?source=copy_link">
+  </head>
+  <body>
+  </body>
+</html>
+
+<!-- ﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -561,3 +571,4 @@
 </body>
 
 </html>
+ -->
